# workshop-ds

./: .gitignore  README.md  pyproject.toml
notebooks/: 1.Workshop - Data Science - Intro.ipynb  2.Workshop - Data Science - Binary Classification.ipynb  intro.ipynb
