[tool.poetry]
name = "wds"
version = "0.0.1"
description = "Workshop Data Science"
authors = ["Maximiliano Uboldi <maximiliano.uboldi@mercadolibre.com>"]
classifiers = [
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[[tool.poetry.source]]
name = "meli"
url = "https://pypi.artifacts.furycloud.io/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml --cov --cov-report=xml:coverage.xml"
